fixed touchbar view obscuring the left/right shift buttons

--- a/src/client/css/touch-bar.css
+++ b/src/client/css/touch-bar.css
@@ -270,7 +270,8 @@ body.slate-touch > .slate-content {
         pointer-events: none;
 
         height: 500px;
-        width : 100%;
+        left: 160px;
+        right: 0;
 
         position: absolute;
         bottom: 140px;
